@@ -1,10 +1,12 @@
 # version 0.62.2
 13/11/2019
    - Added tests for issue #43 (margaretha)
+22/11/2019
+   - Added tests for the statistic API with KoralQuery (margaretha)   
 
 # version 0.62.1
 08/07/2019
-   - Added tests for public metadata response in search api (margaretha, issue #43)
+   - Added tests for public metadata response in search API (margaretha, issue #43)
    - Disabled some tests of unused/disabled web-services (margaretha)
 
 version 0.62
